hphp/test/slow/parser/hh-reserved-name-parent-2.php.expectf
Fatal error: Cannot use `Parent` as a type name as it is reserved in %s/test/slow/parser/hh-reserved-name-parent-2.php on line 4
